<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.detail.DetailMovieActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <ImageView
                android:id="@+id/img_detail_banner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:background="@color/colorBgItem"
                android:contentDescription="@string/detail_banner" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>


    <include
        android:id="@+id/view_error"
        layout="@layout/view_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"/>

    <include
        android:id="@+id/view_empty"
        layout="@layout/view_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"/>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/sw_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/view_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_poster_detail"
                    android:layout_width="100dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    app:cardCornerRadius="16dp"
                    app:layout_constraintDimensionRatio="2:3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/img_poster_detail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorBgItem"
                        android:contentDescription="@string/image_poster"/>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tv_title_movie_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:fontFamily="@font/veramono"
                    tools:text="Title Movie"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@id/cv_poster_detail"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <ImageView
                    android:id="@+id/img_star"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_star"
                    app:layout_constrainedWidth="true"
                    android:contentDescription="@string/icon_rating"
                    app:layout_constraintStart_toEndOf="@id/cv_poster_detail"
                    app:layout_constraintTop_toBottomOf="@id/tv_title_movie_detail"/>

                <TextView
                    android:id="@+id/tv_rating_movie_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:fontFamily="@font/acme_regular"
                    tools:text="10"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@id/img_star"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/img_star"
                    app:layout_constraintTop_toTopOf="@id/img_star"/>


                <ImageView
                    android:id="@+id/img_runtime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_runtime"
                    app:layout_constrainedWidth="true"
                    android:contentDescription="@string/icon_rating"
                    app:layout_constraintStart_toEndOf="@id/cv_poster_detail"
                    app:layout_constraintTop_toBottomOf="@id/img_star"/>

                <TextView
                    android:id="@+id/tv_runtime_movie_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:fontFamily="@font/acme_regular"
                    tools:text="100 Minutes"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@id/img_runtime"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/img_runtime"
                    app:layout_constraintTop_toTopOf="@id/img_runtime"/>


                <TextView
                    android:id="@+id/tv_genres"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/veramono"
                    android:text="@string/genres"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cv_poster_detail"/>

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/cg_genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_genres"
                    app:selectionRequired="false" />

                <TextView
                    android:id="@+id/tv_overview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/veramono"
                    android:text="@string/overview"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cg_genre"/>

                <TextView
                    android:id="@+id/tv_overview_movie_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text="@string/overview"
                    android:fontFamily="@font/acme_regular"
                    android:textColor="@color/colorTextSecondary"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_overview"/>

                <TextView
                    android:id="@+id/tv_review"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/review"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_overview_movie_detail"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_review"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:visibility="gone"
                    tools:listitem="@layout/item_review"
                    app:layout_constraintTop_toBottomOf="@id/tv_review" />

                <TextView
                    android:id="@+id/tv_videos"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/veramono"
                    android:text="@string/videos"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rv_review"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_videos"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_videos"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>